bug: none - checkpoint: Expand / Collapse headers
- This "first draft" includes expand/collapse button in the headers section which will show/hide To/CC info. This doesnt seem to be enough to be really useful. In the second draft, I'll play with hiding attachments and tags.
- Moved "Close" button from the toolbar to the corner of the top subject bar in CV and when reading message w/ the reading pane off.
- Removed "Subject" label from the subject bar in CV and replaced w/ Conversation icon

Copied from Perforce
 Change: 24263

--- a/WebRoot/js/zimbraMail/config/style/zm.css
+++ b/WebRoot/js/zimbraMail/config/style/zm.css
@@ -413,28 +413,30 @@ td.DDSepInvisible div {
 }
 
 /* Container for the header of the message */
-.ZmMailMsgView .MsgHeader {
-	padding-top:7px;
+.ZmMailMsgView .MsgHeaderTable {
+	padding-top:5px;
 	@PageHeaderBg@
 	@BottomSeparator@
 }
 
-.ZmMailMsgView .MsgHeader table {
-	table-layout: fixed;
+.ZmMailMsgView .SubjectCol { 
+	@FontBigger@
+	@Text@
 }
 
-.ZmMailMsgView .MsgHeader .LabelColName {
+.ZmMailMsgView .LabelColName {
 	@NoWrap@
 	@Label@		/* ??? bold?*/
 	vertical-align: top;
 	text-align: right;
-	width:120px;		/* ??? SIZE */
+	padding: 3 0 3 0;
 }
 
-.ZmMailMsgView .MsgHeader .LabelColValue {
+.ZmMailMsgView .LabelColValue {
 	@Text@
 	white-space: normal;
 	vertical-align: top;
+	padding: 3px;
 }
 
 /* ??? USE? */
